RESOLVED FIXED248065
REGRESSION(?): [iOS] ASSERTION FAILED: result in WebKit::NetworkProcess::allowsFirstPartyForCookies()
https://bugs.webkit.org/show_bug.cgi?id=248065
Summary REGRESSION(?): [iOS] ASSERTION FAILED: result in WebKit::NetworkProcess::allo...
Ryan Haddad
Reported 2022-11-17 16:07:34 PST
imported/w3c/web-platform-tests/service-workers/cache-storage/cross-partition.https.tentative.html has been a flaky crash on iOS since it was added with the WPT sync in https://commits.webkit.org/256529@main https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebcodecs%2Ffull-cycle-test.https.any.html%3Fh264_avc&platform=ios
Attachments
crash log (31.24 KB, text/plain)
2022-11-17 16:12 PST, Ryan Haddad
no flags
Radar WebKit Bug Importer
Comment 1 2022-11-17 16:07:46 PST
Ryan Haddad
Comment 2 2022-11-17 16:12:30 PST
Created attachment 463594 [details] crash log Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 JavaScriptCore 0x136623f4e WTFCrash + 14 (Assertions.cpp:327) 1 WebKit 0x119aca40b WTFCrashWithInfo(int, char const*, char const*, int) + 27 (Assertions.h:754) 2 WebKit 0x11a9d14c3 WebKit::NetworkProcess::allowsFirstPartyForCookies(WTF::ObjectIdentifier<WebCore::ProcessIdentifierType>, WTF::URL const&) + 579 (NetworkProcess.cpp:422)
Ryan Haddad
Comment 3 2022-11-17 16:13:19 PST
ASSERTION FAILED: result /Volumes/Data/worker/Apple-iOS-16-Simulator-Debug-Build/build/Source/WebKit/NetworkProcess/NetworkProcess.cpp(422) : bool WebKit::NetworkProcess::allowsFirstPartyForCookies(WebCore::ProcessIdentifier, const WTF::URL &)
EWS
Comment 4 2022-11-17 16:21:00 PST
Test gardening commit 256810@main (ebc8d0272489): <https://commits.webkit.org/256810@main> Reviewed commits have been landed. Closing PR #6614 and removing active labels.
Fujii Hironori
Comment 5 2022-11-19 05:52:57 PST
255420@main (bug#244068) added the assertion.
youenn fablet
Comment 6 2023-01-25 08:05:19 PST
EWS
Comment 7 2023-01-26 03:47:31 PST
Committed 259417@main (1b0d8f7b12c4): <https://commits.webkit.org/259417@main> Reviewed commits have been landed. Closing PR #9113 and removing active labels.
Ben Schwartz
Comment 8 2024-05-31 17:22:02 PDT
This no longer appears to be occurring. Removing test expectations. Please file a new bug if issues persist. Tracking test expectations removal in bug #274990 (rdar://129080660).
Note You need to log in before you can comment on or make changes to this bug.