REGRESSION(?): [iOS] ASSERTION FAILED: result in WebKit::NetworkProcess::allowsFirstPartyForCookies() https://bugs.webkit.org/show_bug.cgi?id=248065 rdar://problem/102490719

Reviewed by Alex Christensen.

We may reuse a process for running shared workers with different first party cookie URLs.
We therefore need for each shared worker to make sure the NetworkProcess allowed first party URLs map is correctly populated.
We move the population at the place where we launch the shared worker instead of the time where the worker process connection is created.
This aligns with how this is done with service workers.

Covered by imported/w3c/web-platform-tests/service-workers/cache-storage/cross-partition.https.tentative.html no longer crashing.

* Source/WebKit/NetworkProcess/SharedWorker/WebSharedWorkerServer.cpp:
(WebKit::WebSharedWorkerServer::didFinishFetchingSharedWorkerScript):
(WebKit::WebSharedWorkerServer::createContextConnection):
* Source/WebKit/NetworkProcess/SharedWorker/WebSharedWorkerServer.h:
* Source/WebKit/NetworkProcess/SharedWorker/WebSharedWorkerServerToContextConnection.cpp:
(WebKit::WebSharedWorkerServerToContextConnection::launchSharedWorker):

Canonical link: https://commits.webkit.org/259417@main